fixing the build